--- a/index.html
+++ b/index.html
@@ -120,6 +120,15 @@
                         class="form-control" style="resize: none;"></textarea>
                 </div>
 
+                <div class="form-group">
+                    <h5>
+                        <span class="badge badge-danger mb-2">
+                            <label for="encodeKey" class="font-weight-bolder">Secret Key</label>
+                        </span>
+                    </h5>
+                    <input type="text" name="encodeKey" id="encodeKey" class="form-control" placeholder="Key...">
+                </div>
+
                 <br>
 
                 <div class="form-group">
@@ -149,6 +158,15 @@
                     </h5>
                     <textarea name="decode" id="decode" cols="30" rows="4" placeholder="Type here..."
                         class="form-control" style="resize: none;"></textarea>
+                </div>
+
+                <div class="form-group">
+                    <h5>
+                        <span class="badge badge-danger mb-2">
+                            <label for="decodeKey" class="font-weight-bolder">Secret Key</label>
+                        </span>
+                    </h5>
+                    <input type="text" name="decodeKey" id="decodeKey" class="form-control" placeholder="Key...">
                 </div>
                 
                 <br>
